<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_planner</name>
  <version>1.0.0</version>
  <description>local_planner</description>

  <maintainer email="jonaswuehrmaintainer@gmail.com">Jonas Wühr</maintainer>
  <license>MIT</license>

  <author email="jonaswuehrmaintainer@gmail.com">Jonas Wühr</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>image_transport</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>lois_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
